Updating service and controllers, also adding booking function, preparing the API to connect to Next.js